--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "~6.5.5",
     "soft-ui-library": "^1.0.9",
     "tslib": "^2.0.3",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
