--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jquery": "^3.5.1",
     "jwt-decode": "^3.0.0",
     "mapbox-gl": "^1.12.0",
+    "ng-lazy-load": "^1.0.8",
+    "ng-lazyload-image": "^9.1.0",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.6.2",
