--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,13 @@
                             }
                         ],
                         "styles": [
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/theme.less",
                             "src/custom-theme.scss",
                             "src/assets/scss/style.scss",
                             "src/styles.css",
-                            "./node_modules/bootstrap/dist/css/bootstrap.css",
-                            "node_modules/ngx-toastr/toastr.css"
+                            "node_modules/ngx-toastr/toastr.css",
+                            "src/assets/scss/styling.scss",
+                            "node_modules/font-awesome/css/font-awesome.css"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js"
