--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^10.2.0",
     "@angular/platform-browser-dynamic": "^10.2.0",
     "@angular/router": "^10.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ng-select/ng-select": "^5.0.9",
     "@popperjs/core": "^2.5.3",
@@ -30,6 +31,7 @@
     "@types/mapbox-gl": "^1.12.5",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.0.0",
     "mapbox-gl": "^1.12.0",
