--- a/package.json
+++ b/package.json
@@ -1,75 +1,85 @@
 {
-  "name": "asasa",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^10.2.0",
-    "@angular/cdk": "^10.2.6",
-    "@angular/common": "^10.2.0",
-    "@angular/compiler": "^10.2.0",
-    "@angular/core": "^10.2.0",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.2.0",
-    "@angular/localize": "^10.2.0",
-    "@angular/material": "^10.2.6",
-    "@angular/platform-browser": "^10.2.0",
-    "@angular/platform-browser-dynamic": "^10.2.0",
-    "@angular/router": "^10.2.0",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ng-select/ng-select": "^5.0.9",
-    "@popperjs/core": "^2.5.3",
-    "@types/jquery": "^3.5.3",
-    "@types/mapbox-gl": "^1.12.5",
-    "angular-in-memory-web-api": "^0.11.0",
-    "bootstrap": "^4.5.3",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "jwt-decode": "^3.0.0",
-    "mapbox-gl": "^1.12.0",
-    "ng-lazy-load": "^1.0.8",
-    "ng-lazyload-image": "^9.1.0",
-    "ng2-order-pipe": "^0.1.5",
-    "ng2-search-filter": "^0.5.1",
-    "ngx-bootstrap": "^5.6.2",
-    "ngx-filter-pipe": "^2.1.2",
-    "ngx-highlightjs": "^4.1.2",
-    "ngx-pagination": "^5.0.0",
-    "ngx-toastr": "^13.1.0",
-    "popper.js": "^1.16.1",
-    "rxjs": "~6.5.5",
-    "soft-ui-library": "^1.0.9",
-    "tslib": "^2.0.3",
-    "xlsx": "^0.16.9",
-    "zone.js": "~0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.0",
-    "@types/jasmine": "^3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.2",
-    "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
-  }
+    "name": "asasa",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "node server.js",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "heroku-postbuild": "ng build --prod"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^10.2.0",
+        "@angular/cdk": "^10.2.6",
+        "@angular/cli": "^10.2.0",
+        "@angular/common": "^10.2.0",
+        "@angular/compiler": "^10.2.0",
+        "@angular/compiler-cli": "^10.2.0",
+        "@angular/core": "^10.2.0",
+        "@angular/flex-layout": "^10.0.0-beta.32",
+        "@angular/forms": "^10.2.0",
+        "@angular/localize": "^10.2.0",
+        "@angular/material": "^10.2.6",
+        "@angular/platform-browser": "^10.2.0",
+        "@angular/platform-browser-dynamic": "^10.2.0",
+        "@angular/router": "^10.2.0",
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+        "@ng-select/ng-select": "^5.0.9",
+        "@popperjs/core": "^2.5.3",
+        "@types/jquery": "^3.5.3",
+        "@types/mapbox-gl": "^1.12.5",
+        "angular-in-memory-web-api": "^0.11.0",
+        "bootstrap": "^4.5.3",
+        "express": "^4.17.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
+        "jwt-decode": "^3.0.0",
+        "mapbox-gl": "^1.12.0",
+        "ng-lazy-load": "^1.0.8",
+        "ng-lazyload-image": "^9.1.0",
+        "ng2-order-pipe": "^0.1.5",
+        "ng2-search-filter": "^0.5.1",
+        "ngx-bootstrap": "^5.6.2",
+        "ngx-filter-pipe": "^2.1.2",
+        "ngx-highlightjs": "^4.1.2",
+        "ngx-pagination": "^5.0.0",
+        "ngx-toastr": "^13.1.0",
+        "path": "^0.12.7",
+        "popper.js": "^1.16.1",
+        "rxjs": "~6.5.5",
+        "soft-ui-library": "^1.0.9",
+        "tslib": "^2.0.3",
+        "typescript": "~3.9.5",
+        "xlsx": "^0.16.9",
+        "zone.js": "~0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^0.1002.0",
+        "@angular/cli": "^10.2.0",
+        "@angular/compiler-cli": "^10.2.0",
+        "@types/jasmine": "^3.6.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.19.2",
+        "angular-cli-ghpages": "^0.6.2",
+        "codelyzer": "^6.0.1",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.9.5"
+    },
+    "engines": {
+        "node": "12.19.0",
+        "npm": "6.14.8"
+    }
 }
