--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@angular/platform-browser-dynamic": "^10.2.0",
         "@angular/router": "^10.2.0",
         "@fortawesome/fontawesome-free": "^5.15.2",
+        "@kolkov/angular-editor": "^1.1.4",
         "@ng-bootstrap/ng-bootstrap": "^7.0.0",
         "@ng-select/ng-select": "^5.0.9",
         "@popperjs/core": "^2.5.3",
