--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
                         ],
                         "styles": [
                             "src/theme.less",
+                            "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
                             "src/custom-theme.scss",
                             "src/assets/scss/style.scss",
                             "src/styles.css",
@@ -100,6 +101,7 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css",
+                            "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/ngx-toastr/toastr.css"
                         ],
