--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "mapbox-gl": "^1.12.0",
         "ng-lazy-load": "^1.0.8",
         "ng-lazyload-image": "^9.1.0",
+        "ng-zorro-antd": "^11.2.0",
         "ng2-order-pipe": "^0.1.5",
         "ng2-search-filter": "^0.5.1",
         "ngx-bootstrap": "^5.6.2",
